--- a/master_thesis/sections/model_flow.tex
+++ b/master_thesis/sections/model_flow.tex
@@ -119,7 +119,7 @@ If $s \in S$ is a source node where all outgoing edges have infinte capacity and
 $t \in T$ is a sink node where all incoming edges have infinte capacity, then
 $|f|$ is equal with the amount of a maximum $(S',T)$-flow $f_s$ of $G(s)$ and a maximum
 $(S,T')$-flow $f_t$ of $G(t)$, where $S' = S\setminus \{s\} \cup out(s)$ 
-and $T' = T \setminus \{t\} \cup in(u)$.
+and $T' = T \setminus \{t\} \cup in(t)$.
 \end{lemma}
 
 \begin{proof}
