finalize proof of theorem 5.1

--- a/macros.tex
+++ b/macros.tex
@@ -20,6 +20,7 @@
 \newcommand{\ExtendedT}[2]{{$T_{#1}(H,#2) = (V_{#1}, E_{#1},\capa_{#1})$}}
 \newcommand{\Hybrid}{{$T_{\text{Hybrid}}(H,V') = (V_{\text{Hybrid}}, E_{\text{Hybrid}},\capa_{\text{Hybrid}})$}}
 \newcommand{\ShortHybrid}{{$T_{\text{Hybrid}}(H,V')$}}
+\newcommand{\SubExtension}{Ex(H_{V'})}
 
 %Residual Capacity
 \newcommand{\R}[1]{{r_f({#1})}}
