--- a/master_thesis/sections/flow_refinement.tex
+++ b/master_thesis/sections/flow_refinement.tex
@@ -140,13 +140,20 @@ S = S_1 \cup \{\incoming{e} \in \delta B_2\ |\ e \setminus V' \cap V_1  \neq \em
 T = T_1 \cup \{\outgoing{e} \in \delta B_2\ |\ e \setminus V' \cap V_2 \neq \emptyset \} \label{T_border_hyperedges}
 \end{align}
 
+\begin{definition}[Extension of a Subhypergraph]
+\label{def:sub_extension}
+We define the extension $\SubExtension$ of a subhypergraph $H_{V'}$ such that each hyperedge of $H = (V,E,c,\omega)$ which is
+partially contained in $H_{V'}$ is fully contained in $\SubExtension$. More formally,
+$\SubExtension = (V' \cup V'', E', c, \omega)$ with $V'' = \bigcup_{e \in \delta B} e \setminus V'$
+and $E' = \{e \in E\ |\ e \subseteq (V' \cup V'')\}$.
+\end{definition}
+
 We have to show that for a maximum $(S,T)$-flow $f$ of $T_L(H_{V'})$ holds $|f| = \omega_{H_{V'}}(B_2)$.
-The idea of the proof is to extend $H_{V'}$ with all hypernodes contained in a border hyperedge 
-$e \in \delta B$. Let $V''$ be the set of all hypernodes contained in a border hyperedge without $V'$. If we
-add all $V'' \cap V_1$ to $S_1$ (see Equation \ref{S1_border_hyperedges}) and all $V'' \cap V_2$ to
-$T_1$ (see Equation \ref{T1_border_hyperedges}) we can show that for a maximum $(S_1,T_1)$-flow 
-$f'$ of $T_L(H_{V' \cup V''})$ holds that $|f'| = \omega_{H_{V'}}(B_2)$.\\
-Afterwards, we use a technique to remove all $v \in V''$ of $T_L(H_{V' \cup V''})$ and show
+The idea of the proof is to use the extension $\SubExtension$ of $H_{V'}$ and add 
+all $V'' \cap V_1$ to $S_1$ (see Equation \ref{S1_border_hyperedges}) and all $V'' \cap V_2$ to
+$T_1$ (see Equation \ref{T1_border_hyperedges}). We can show that for a maximum $(S_1,T_1)$-flow 
+$f'$ of $T_L(\SubExtension)$ holds that $|f'| = \omega_{H_{V'}}(B_2)$.\\
+Afterwards, we use a technique to remove all $v \in V''$ of $T_L(\SubExtension)$ and show
 that the resulting flow network is $T_L(H_{V'})$ with $S$ and $T$ as source and sink set as
 defined in Equation \ref{S_border_hyperedges} and \ref{T_border_hyperedges}. Moreover, for a maximum
 $(S,T)$-flow $f$ then holds that $|f| = |f'| = \omega_{H_{V'}}(B_2)$. \\
@@ -215,7 +222,7 @@ and $T' = (T \setminus \{t\}) \cup (in(t) \setminus E_t)$.
 \end{lemma}
 
 \begin{proof}
-$E_s$ is an arbitrary subset of $\mathcal{R}(s)$, where foreach $v \in E_s$ edge $(s,v)$ is removable.
+$E_s$ is an arbitrary subset of $\mathcal{R}(s)$, where foreach $v \in E_s$ the edge $(s,v)$ is removable.
 $S'$ is the source set without node $s$ extended with all outgoing edges of 
 $s$ minus the removable edges $E_s$. With Lemma \ref{lemma:source_edge_removal}
 we can remove all edges $(s,v)$ with $v \in E_s$ from $G$ and obtain flow network $G'$. Finally, we can
@@ -233,7 +240,7 @@ the equality $\Delta_H = \Delta_{H_{V'}}$ holds.
 
 \begin{theorem} 
 \label{lemma:delta_proof}
-Let $B_1$ be a bipartition of $H$ and $T_L(H_{V'})$ the flow network of subhypergraph
+Let $B_1 = (V_1,V_2)$ be a bipartition of $H$ and $T_L(H_{V'})$ the flow network of subhypergraph
 $H_{V'}$ with $S$ and $T$ as defined in Equation \ref{S_border_hyperedges} and \ref{T_border_hyperedges} (with $V' \subseteq V$).
 If $B_2$ is a bipartition obtained by a maximum $(S,T)$-flow computation on $T_L(H_{V'})$
 with $f$ as maximum flow,
@@ -241,37 +248,45 @@ then $\omega_{H_{V'}}(B_2) = |f|$ ($\Rightarrow \Delta_H = \Delta_{H_{V'}}$).
 \end{theorem}
 
 \begin{proof}
-Let $V'' = \bigcup_{e \in \delta B} e \setminus V'$ be the set of all hypernodes contained
-in a \emph{border hyperedge}, but not in $V'$. Let $H_{V' \cup V''}$ be the subhypergraph
-obtained by extending $H_{V'}$ with all missing hypernodes such that 
-each \emph{border hyperedge} of $H_{V'}$ is fully contained in $H_{V'\cup V''}$. 
-Let $T_L(H_{V' \cup V''})$ be the resulting flow network with $S' = S_1\ \cup\ (V'' \cap V_1)$ and 
-$T' = T_1\ \cup\ (V'' \cap V_2)$ as source and sink sets. Further, let $f'$ be a maximum $(S',T')$-flow 
-of $T_L(H_{V' \cup V''})$ and $B_2$ be the corresponding minimum $(S',T')$-bipartition. Because
-we add all hypernodes which are part of a hyperedge of $H$ and also of $H_{V'}$ are fully contained
-in $H_{V' \cup V''}$ the equality $|f'| = \omega_{H_{V'}}(B_2)$ holds. \\
-\todo{better description of why this equality holds.}\\
-In the following, we will apply Lemma \ref{lemma:general_source_and_sink_removal} on all
-hypernodes $v \in V''$ such that the flow network $T_L(H_{V' \cup V''})$ converge against
+Consider the extension $\SubExtension$ of subhypergraph $H_{V'}$ (see Definition \ref{def:sub_extension}).
+Each maximum $(S,T)$-flow $f'$ of $T_L(\SubExtension)$ is then equal with a minimum-weight
+$(S,T)$-cutset of $H_{V'}$ according to our definition of the cut $\omega_{H_{V'}}(B_2)$ over
+the cut hyperedges of $H$. Because each hyperedge which is partially contained in $H_{V'}$
+is fully contained in $\SubExtension$. Therefore, it holds that $|f'| = \omega_{H_{V'}}(B_2)$.
+However, we have to model some restrictions into our source and sink set of $T_L(\SubExtension)$.
+We will denote the source and sink set of $T_L(\SubExtension)$ with $S'$ and $T'$.
+Each hypernode contained in a non-cut border hyperedge $e \in \delta B_1$ should not be able to move
+such that we ensure that $e$ is not cut after a maximum $(S',T')$-flow calculation. Therefore,
+we add $S_1$ and $T_1$ to $S'$ and $T'$ (see Equation \ref{S1_border_hyperedges} and \ref{T1_border_hyperedges}).
+Further, all hypernodes $v \in V''$ (see Defintion \ref{def:sub_extension}) are not contained in
+$H_{V'}$. Consequently, they cannot change their block if we calculate a maximum $(S,T)$-flow of
+$H_{V'}$. Therefore, we add $V'' \cap V_1$ to $S'$ and $V'' \cap V_2$ to $T'$.
+With $S'$ and $T'$ as source and sink set we ensure that only hypernodes $v \in V'$ are able
+to move and since $S_1 \subseteq S'$ and $T_1 \subseteq T'$, we ensure that $\omega_H(B_2) \le \omega_H(B_1)$
+(see Lemma \ref{cut_decrease_proof}). \\
+In the following, we apply Lemma \ref{lemma:general_source_and_sink_removal} on all
+hypernodes $v \in V''$ such that the flow network $T_L(\SubExtension)$ converge against
 $T_L(H_{V'})$ with $S$ and $T$ as source and sink set as defined in Equation 
-\ref{S_border_hyperedges} and \ref{T_border_hyperedges}. Per definition a node $v \in V''$
+\ref{S_border_hyperedges} and \ref{T_border_hyperedges} \emph{without} changing the
+amount of the maximum flow $f'$. Since $|f'| = \omega_{H_{V'}}(B_2)$, for a maximum $(S,T)$-flow
+$f$ of $T_L(H_{V'})$ then holds $|f| = \omega_{H_{V'}}(B_2)$. Per definition a node $v \in V''$
 is either a source or sink node. For each source node $s \in V''$ we have to 
 define a removable subset $E_s \subseteq \mathcal{R}(s)$ such that after removing all $s \in S' \cap V''$
 the resulting source set $S$ is equal to Equation \ref{S_border_hyperedges}. The technique
 for removing each sink node $t \in S' \cap V''$ will be equivalent. For a source node $s \in V''$
 we define $E_s = \{\incoming{e}\ |\ e \in I(s) \cap \delta B_1\}$. Remember, $\delta B_1$ contains
 all non-cut border hyperedges of $H$. Thus, for each $e \in I(s) \cap \delta B_1$ exists
-a source node $\bar{s} \in e$ of $S_1$ such that edges $(s,\incoming{e})$ and $(\bar{s},\incoming{e})$
-are contained in $T_L(H_{V' \cup V''})$. Therefore, $E_s$ is a removable subset of $\mathcal{R}(s)$.
+a source node $\bar{s} \in V'$ of $S_1$ such that edges $(s,\incoming{e})$ and $(\bar{s},\incoming{e})$
+are contained in $T_L(\SubExtension)$ (see \autoref{img:delta_proof_illustration}). Therefore, $E_s$ is a removable subset of $\mathcal{R}(s)$.
 For each $t \in T' \cap V''$ we define the removable subset $E_t = \{\outgoing{e}\ |\ e \in I(t) \cap \delta B_1\}$.
 Applying Lemma \ref{lemma:general_source_and_sink_removal} on all source nodes $s \in V''$
 with $E_s$ as removable subset and on all sink nodes $t \in V''$ with $E_t$ 
 as removable subset yield flow network $T_L(H_{V'})$ with $S$ and $T$ as source and sink 
 set as defined in Equation \ref{S_border_hyperedges} and \ref{T_border_hyperedges}.
 A hyperedge $e \in \delta B_1$ cannot become a source or sink node because if we remove a 
-source node $s \in V''$ then $e'$ is in the removable subset $E_s$ (see \autoref{img:delta_proof_illustration}). The same holds
+source node $s \in e$ then $e'$ is in the removable subset $E_s$ (see \autoref{img:delta_proof_illustration}). The same holds
 for each sink node $t \in V''$. A hyperedge $e \in \delta B_2$ becomes a source node of $S$
-if we remove a source node $s \in e$ and sink node of $T$ if we remove a 
+if we remove a source node $s \in e$ and a sink node of $T$ if we remove a 
 sink node $t \in e$ because $\forall e \in \delta B_2: e',e'' \notin E_s \cup E_t$. 
 Therefore, $S$ and $T$ are equal to our source and sink set defintion and
 for a maximum $(S,T)$-flow $f$ it holds that $|f| = |f'| = \omega_{H_{V'}}(B_2)$.
